--- a/coc-settings.json
+++ b/coc-settings.json
@@ -24,5 +24,6 @@
     "typescriptreact",
     "html"
   ],
-  "codeLens.enable": false
+  "codeLens.enable": false,
+  "snippets.ultisnips.pythonPrompt": false
 }
